Fixed spacing between social media icons on product view page and replace add to bag button with image asset.

--- a/wp-content/themes/tideandpool/style.less
+++ b/wp-content/themes/tideandpool/style.less
@@ -1003,6 +1003,7 @@ section.product {
 				font-size: 1.5em;
 				margin:0 0 30px 0;
 				text-transform: uppercase;
+				color:white !important;
 				span.price {
 					ins {
 						color:#4d004e;
@@ -1056,18 +1057,24 @@ section.product {
 					width:127px;
 					height: 30px;
 					line-height: 30px;
-					font-family: 'futura_condensedbold';
-					text-transform: uppercase;
+					background: url('css/img/add-to-bag-btn.png')no-repeat;
+					text-indent: -10000px;
 					display: block;
-					text-align: center;
-					background: #1093ab;
-					color:white;
 					border:none;
 					
 				}
 			}
 			.addthis_toolbox {
 				width:500px;
+				a.addthis_button_tweet {
+					margin:0 0 0 -5px;
+				}
+				a.addthis_button_pinterest_pinit {
+					margin:0 0 0 -20px;
+				}
+				a.addthis_button_email {
+					margin:0 0 0 15px;
+				}
 			}
 		}
 	}
